Added ErrorDialogs where appropriate, fixed compiler warnings and FindBugs(tm) warnings.
svn path=/avr_eclipse_plugin_2.0/trunk/; revision=447